--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,5 +1,5 @@
 
-# The name of this app. Must be unique within a project.
+      # The name of this app. Must be unique within a project.
 name: app
 
 # The runtime the application uses. The 'type' key defines the base container
@@ -21,6 +21,18 @@ mounts:
     source: local
     source_path: uploads
     
+
+# The size of the persistent disk of the application (in MB).
+disk: 256
+
+# The relationships of the application with services or other applications.
+#
+# The left-hand side is the name of the relationship as it will be exposed
+# to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
+# side is in the form '<service name>:<endpoint name>'.
+relationships:
+    database: 'db:mysql'
+
 
 hooks:
     build: |
