--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -17,7 +17,7 @@ type: 'php:8.1'
 # application container. The 'source_path' specifies the subdirectory
 # from within the source that the mount should point at. 
 mounts:
-  'public/uploads':
+  'web/uploads':
     source: local
     source_path: uploads
     
@@ -43,5 +43,5 @@ hooks:
 web:
   locations: 
     '/': 
-      root: "\"public\""
+      root: "\"web\""
       passthru: "/index.php"
